--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 .navbar{
   display: flex;
-  justify-content: space-between
+  justify-content: space-between;
+  margin: 1rem 1rem 0rem 0rem;
 }
 
 .title{
@@ -10,6 +11,10 @@
 .navitem{
   font-size: 1.5rem;
   margin-left: 0.5rem;
+}
+
+.navcart{
+  max-height: 2rem;
 }
 
 .main{
