--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 1rem 2rem 3rem;
-  background-color: antiquewhite
+  background-color: plum
 }
 
 .title{
@@ -21,6 +21,11 @@
 .navcart{
   max-height: 2rem;
   margin: 0rem 0.2rem 0rem 1rem;
+}
+
+.shopeeicon{
+  max-height: 5rem;
+  margin-right: 1rem;
 }
 
 .main{
