--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,11 @@ img.small{
   max-width: 20rem;
 }
 
+img.tiny{
+  max-height:5rem;
+  max-width: 8rem;
+}
+
 .description{
   max-width: 20rem;
 }
